--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
-  <head>
-    <meta charset="utf-8">
-    <title>TITLE</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Your link to your CSS file -->
-    <link rel="stylesheet" href="">
-    <!-- Your Javascript file goes here -->
-    <script src="" async defer></script>
-  </head>
-  <body>
-    <!-- your HTML should go here -->
-    <nav>
-      <h1>Let's Play the Guessing Number Game!</h1>
-    </nav>
 
+<head>
+	<meta charset="utf-8">
+	<title>TITLE</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet" href="styles.css">
+	<script src="app.js" async defer></script>
+</head>
 
-  </body>
+<body>
+
+	<nav>
+		<h1 class="mt-5">Let's Play the Guessing Number Game!</h1>
+	</nav>
+
+	<div class="section">
+		<div class="container d-flex justify-content-center">
+			<div class="col-4 mt-5" id="game_board">
+				<div>
+					<button type="button" class="btn btn-warning" onclick="reset()" id="reset">Reset</button>
+				</div>
+				<div class="input-group mt-5 mb-5">
+					<button class="btn btn-outline-success text-dark" type="button" id="guess_button" onclick="guess()">Guess</button>
+					<input type="text" class="form-control" placeholder="Pick a Number" id="guessed_number">
+				</div>
+				<div id="guesses">
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+	</script>
+</body>
+
 </html>
